[package]
name = "wikigraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
dashmap = { version = "5.5.3", features = ["rayon"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
md5 = "0.7.0"
memmap = "0.7.0"
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = "0.6.0"
xml-rs = "0.8.20"
